--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.2",
+    "swiper": "^8.4.5",
     "vite-plugin-svgr": "^2.4.0"
   },
   "devDependencies": {
