--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.2",
+    "react-use-window-scroll": "^1.1.1",
     "swiper": "^8.4.5",
     "vite-plugin-svgr": "^2.4.0"
   },
